--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>hello world</h1>
 
-<script src="js/024 praktika.js"></script>
+<script src="js/026 script.js"></script>
 <!-- <script src="js/012 my script.js"></script> -->
 </body>
 </html>
