--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            height: 1000px;
+        }
+        .box {
+            width: 150px;
+            height: 100px;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>hello world</h1>
+    <div class="box">
+        Toch me!
+    </div>
 
-<script src="js/026 script.js"></script>
+<script src="js/034 script.js"></script>
 <!-- <script src="js/012 my script.js"></script> -->
 </body>
 </html>
