--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body {
-            height: 1000px;
-        }
-        .box {
-            width: 150px;
-            height: 100px;
-            background-color: red;
-        }
+      body {
+        height: 1000px;
+      }
+      .box {
+        width: 150px;
+        height: 100px;
+        background-color: red;
+      }
     </style>
-</head>
-<body>
-    <h1>hello world</h1>
-    <div class="box">
-        Toch me!
-    </div>
+    <!-- <script defer src="js/035 script.js"></script>
+    <script defer src="js/test.js"></script> -->
+  </head>
+  <body>
+    <!-- <script async src="js/035 script.js"></script> -->
+    <!-- <script async src="js/test.js"></script> -->
+    <p>hello world</p>
+    <p class="box">Toch me!</p>
 
-<script src="js/034 script.js"></script>
-<!-- <script src="js/012 my script.js"></script> -->
-</body>
+    <script src="js/035 script.js"></script>
+  </body>
 </html>
